Line height input style fix - cursors on mobile were too big.

--- a/public/styles/components/forms.less
+++ b/public/styles/components/forms.less
@@ -20,8 +20,6 @@ input, select, textarea, .btn {
 }
 
 input, select, .btn {
-  line-height: @form-input-height;
-
   display: inline-block;
 
   height: @form-input-height;
@@ -44,8 +42,6 @@ input, select, .btn {
   }
 
   .form-small & {
-    line-height: @form-input-height-s1;
-
     height: @form-input-height-s1;
     padding-right: @spacing-s2;
     padding-left: @spacing-s2;
